fixed spacing on image cards

--- a/game/src/components/CharacterCard/style.css
+++ b/game/src/components/CharacterCard/style.css
@@ -23,5 +23,6 @@
        
   }
   .card > .img-container > img {
-    width: 60%
+    width: 60%;
+    height:100%
   }  
